tests/NormalTests/paczka1/fuzzy1/70003988.err
Error in line 3: 1s3mEwI8P A283 1,0
Error in line 4: 1s3mEwI8P A369 45,2
Error in line 11: KULojULfo A369 22,9
Error in line 15: JkrM A182 0,7
Error in line 6: 2j3F S616 62,1
Error in line 23: JkrM S616 54,5
Error in line 21: KULojULfo S616 69,5
